// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should renders \`size\` prop when passed in 1`] = `
<i
  class="mgt-icon"
  style="font-size:28px"
/>
`;

exports[`Icon should renders custom className 1`] = `
<i
  class="mgt-icon jest-test-class"
/>
`;

exports[`Icon should renders custom styles 1`] = `
<i
  class="mgt-icon"
  style="color:#333;background-color:#f0f0f0"
/>
`;

exports[`Icon should renders dom correctly 1`] = `
<i
  class="mgt-icon"
/>
`;
